StarterSet/force-app/main/default/objects/ViewHistory__c/ViewHistory__c.object-meta.xml
<CustomObject>
    <label>参照履歴</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>参照履歴</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>