StarterSet/force-app/main/default/objects/ViewHistory__c/fields/ViewCount__c.field-meta.xml
<CustomField>
    <fullName>ViewCount__c</fullName>
    <label>閲覧回数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>