StarterSet/force-app/main/default/objects/ViewHistory__c/fields/ViewRecord__c.field-meta.xml
<CustomField>
    <fullName>ViewRecord__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_350, FIND(&quot;/services/Soap/&quot;, $Api.Partner_Server_URL_350)) + ViewRecordId__c</formula>
    <label>参照したレコード</label>
    <type>Text</type>
</CustomField>