StarterSet/force-app/main/default/objects/ViewHistory__c/fields/ViewRecordId__c.field-meta.xml
<CustomField>
    <fullName>ViewRecordId__c</fullName>
    <label>参照したレコードID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>