StarterSet/force-app/main/default/objects/ViewHistory__c/fields/ViewUser__c.field-meta.xml
<CustomField>
    <fullName>ViewUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>参照ユーザ</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ViewHistorys</relationshipName>
    <type>Lookup</type>
</CustomField>