StarterSet/force-app/main/default/objects/ViewHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ViewRecord__c</columns>
    <columns>ViewUser__c</columns>
    <columns>ViewCount__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>